CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.15

	- Updated the CUPS license agreement for the new MacOS
	  license exception.
	- The lpoptions command didn't set options properly when
	  using the default printer.
	- Added ConfigFilePerm and LogFilePerm directives.
	- Increased maximum size of MIME types to IPP_MAX_NAME
	  to allow for longer printer names.
	- No longer create remote printers when loading job
	  history data.
	- The printer-make-and-model attribute wasn't set when
	  the PPD file didn't contain a NickName attribute.
	- Now handle PPD files with translation strings longer
	  than 80 bytes - they are truncated if they go over...
	- The scheduler didn't handle signals until after it
	  loaded the configuration files the first time; this
	  caused problems on some installations that would
	  restart the scheduler as the system booted into run
	  level 3.
	- Now throttle broadcasts like we do for polling.
	- Fixed a bug in the reading of PPD files using CR's
	  instead of CR LF's or LF's.
	- The scheduler would crash if cupsd.conf contained a
	  BrowseProtocols line with no protocols listed.
	- The HTML job operation templates now link back to the
	  destination printer or class.
	- The serial backend now detects USB serial devices.
	- The LPD mini-daemon (cups-lpd) now passes the
	  job-originating-host-name attribute to the scheduler
	  (cupsd).
	- Updated the IPP backend to reconnect after downgrading
	  from IPP/1.1 to 1.0, and when sending requests to HP
	  JetDirect interfaces that don't support HTTP
	  Keep-Alive like they should.
	- Now pass NLSPATH and DYLD_LIBRARY_PATH environment
	  variables, if defined, to CGI and job processes.
	- Removed the pstoraster filter (based on GNU
	  Ghostscript 5.50) and now provide the raster "driver"
	  and patch file necessary to use the current GNU
	  Ghostscript 7.05 release.
	- Removed unnecessary fonts and updated the Courier and
	  Symbol fonts to the latest versions to better support